fix create groups layout stretching

--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -3,7 +3,8 @@
     height: 100%;
     min-height: 100%;
     background-color: #067db7;
-    text-align: center;
+    /* text-align: center; */
+    background-repeat: repeat-y;
 }
 
 .menu_bar {
